@@ -1,3 +1,7 @@
+2007-05-12  Oliver Hader  <oh@inpublica.de>
+
+	* Fixed bug #5074: IRRE - Hook processDatamap_afterDatabaseOperations executed early
+
 2007-05-09  Ingo Renner  <typo3@ingo-renner.com>
 
 	* fixed bug 5047: mp3 icon is missing
